# dl-framework

./: .gitignore  Cargo.toml  README.md  TODO.md
benches/: bench_training.rs  fold_reduce.rs  mnist.rs  my_benchmark.rs  synthetic.rs
examples/: logic_gates.rs  mnist.rs  xor.rs
src/: load_mnist.rs  main.rs  nn.rs
src/net/: act_funcs.rs  buffer.rs  checkpoint.rs  cost_funcs.rs  functions.rs  hyperparams.rs  init.rs  load_mnist.rs  mod.rs  train.rs
src/nn/: activation.rs  matrix.rs  mod.rs
