[package]
name = "dl-framework"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = { version = "0.34.2", features = ["rand", "serde-serialize"] }
rand = "0.9.2"
flate2 = "1.1.5"
byteorder = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
matrixmultiply = { version = "0.3.10", features = ["threading"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "my_benchmark"
harness = false
